<resources>
    <string name="app_name">Yo Tube Music</string>
    <string name="music_list_starting_for_the_first_time">is music list starting for the first time</string>
    <string name="on_nothing_selected_toast_text">nothing selected</string>
    <string name="button_pause_song_toast_text">already paused</string>
    <string name="button_play_song_toast_text">no music to play</string>
    <string name="text_view_song_name_text">Song name</string>
    <string name="text_view_author_text">Author</string>
    <string name="text_view_genre_text">Genre</string>
    <string name="button_select_song_text">Select Song</string>
    <string name="button_play_song_text">Play</string>
    <string name="button_pause_song_text">Pause</string>
    <string name="button_stop_song_text">Stop</string>
    <string name="list_item_text_view_song_hint">Song name</string>
    <string name="list_item_text_view_author_hint">Author</string>
    <string name="list_item_text_view_genre_hint">Genre</string>

    <string-array name="authors_array">
        <item>all authors</item>
        <item>Author 1</item>
        <item>Author 2</item>
        <item>Author 3</item>
        <item>Author 4</item>
    </string-array>
    <string-array name="genres_array">
        <item>all genres</item>
        <item>Genre 1</item>
        <item>Genre 2</item>
        <item>Genre 3</item>
    </string-array>
</resources>